
* GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)

* GITHUB#14178: Add a Faiss-based vector format in the sandbox module. (Kaival Parikh)

* GITHUB#14792: Introduced OffHeapQuantizedFloatVectorValues class to access float vectors when only quantized byte vectors are available in the index. (Pulkit Gupta)

Improvements
---------------------

* GITHUB#15568: Add markdown support for javadocs and modernize highlighting a bit. (Dawid Weiss)

* GITHUB#14972: Require named thread factory in ThreadPoolExecutor constructors. (Dawid Weiss)

* GITHUB#14597: Rewrite expressions compiler to use Java 24+ Classfile library instead of ASM.
  This avoids clashes with other ASM versions on classpath because it removes the dependency.
  (Uwe Schindler)

* GITHUB#15002: Remove synchronized WeakHashMap from IndexReader. This was added to help prevent
  SIGSEGV with the old unsafe "mmap hack", which has been replaced by MemorySegments.
  (Uwe Schindler, Robert Muir)

* GITHUB#15124: Use RamUsageEstimator to calculate size for non-accountable queries. (Sagar Upadhyaya)

* GITHUB#15453: Avoid unnecessary sorting and instantiations in readMapOfStrings. (Benjamin Lerer)

Optimizations
---------------------
* GITHUB#13782: Replace handwritten loops compare with Arrays.compareUnsigned in TermsEnum and TermsEnumFrame classes. (Zhou Hui)

* GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
* GITHUB#14022: Optimize DFS marking of connected components in HNSW by reducing stack depth, improving performance and reducing allocations. (Viswanath Kuchibhotla)

* GITHUB#14874: Improve off-heap KNN byte vector query performance in cases where indexing and search are performed by the same process. (Kaival Parikh)

* GITHUB#15043: Vectorize L2 normalize function. (Ramakrishna Chilaka)

* GITHUB#15085, GITHUB#15092: Hunspell suggestions: Ensure candidate roots are not worse before updating. (Ilia Permiashkin)

Bug Fixes